--- a/ui/vmm-host.ui
+++ b/ui/vmm-host.ui
@@ -945,7 +945,7 @@
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">Route-Via:</property>
+                                            <property name="label" translatable="yes">Static Route:</property>
                                           </object>
                                           <packing>
                                             <property name="top_attach">3</property>
@@ -1050,7 +1050,7 @@
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">Route-Via:</property>
+                                            <property name="label" translatable="yes">Static Route:</property>
                                           </object>
                                           <packing>
                                             <property name="top_attach">3</property>
