--- a/ui/vmm-preferences.ui
+++ b/ui/vmm-preferences.ui
@@ -585,7 +585,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">Install _audio device:</property>
+                                    <property name="label" translatable="yes">Inst_all sound device:</property>
                                     <property name="use_underline">True</property>
                                     <property name="mnemonic_widget">prefs-new-vm-sound</property>
                                   </object>
