--- a/ui/vmm-create-net.ui
+++ b/ui/vmm-create-net.ui
@@ -1505,7 +1505,7 @@
                                         <property name="xalign">0</property>
                                         <property name="yalign">0</property>
                                         <property name="xpad">10</property>
-                                        <property name="label" translatable="yes">&lt;b&gt;Note:&lt;/b&gt; The network could be chosen from one of the IPv6 private address ranges. eg FC00::/7.  In any case. the prefix must be &lt;b&gt;64&lt;/b&gt;.
+                                        <property name="label" translatable="yes">&lt;b&gt;Note:&lt;/b&gt; The network could be chosen from one of the IPv6 private address ranges. eg FC00::/7.  In any case, the prefix must be &lt;b&gt;64&lt;/b&gt;.
 A typical IPv6 network address will look something like:  fd00:dead:beef:55::/64</property>
                                         <property name="use_markup">True</property>
                                         <property name="wrap">True</property>
