--- a/ui/vmm-details.ui
+++ b/ui/vmm-details.ui
@@ -7065,7 +7065,7 @@ I/O:</property>
                                 <property name="position">18</property>
                               </packing>
                             </child>
-                            <child>
+                            <child type="tab">
                               <object class="GtkLabel" id="label182">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
