--- a/ui/vmm-create-interface.ui
+++ b/ui/vmm-create-interface.ui
@@ -8,8 +8,8 @@
   </object>
   <object class="GtkAdjustment" id="adjustment2">
     <property name="upper">1024</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step_increment">0.01</property>
+    <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="adjustment3">
     <property name="upper">1024</property>
@@ -746,6 +746,8 @@
                             <property name="can_focus">True</property>
                             <property name="invisible_char">●</property>
                             <property name="adjustment">adjustment2</property>
+                            <property name="climb_rate">0.050000000000000003</property>
+                            <property name="digits">2</property>
                           </object>
                           <packing>
                             <property name="expand">True</property>
