connection: Do non-VM polling on demand
The goal here is to reduce the amount of tick() polling that we do by default.
For things like pools, networks, and interfaces, the constant polling is
not very helpful and causes CPU churn and slowness for remote connections.

Switch to a more on demand style. Pages that want new information for
these objects now request a priority tick that only refreshes the info
we want.

This isn't perfect, but neither was the previous solution in the face of
things like XML updates behind our back. The real solution here is libvirt
event support across the board.

--- a/ui/vmm-host.ui
+++ b/ui/vmm-host.ui
@@ -106,6 +106,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="border_width">6</property>
+            <signal name="switch-page" handler="on_host_page_switch" swapped="no"/>
             <child>
               <object class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
