--- a/ui/vmm-details.ui
+++ b/ui/vmm-details.ui
@@ -5419,12 +5419,40 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <object class="GtkEntry" id="gfx-password">
+                                              <object class="GtkHBox" id="gfx-password-box">
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
-                                                <property name="visibility">False</property>
-                                                <property name="invisible_char">●</property>
-                                                <signal name="changed" handler="on_vnc_password_changed" swapped="no"/>
+                                                <property name="can_focus">False</property>
+                                                <child>
+                                                  <object class="GtkCheckButton" id="gfx-use-password">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">False</property>
+                                                    <property name="use_stock">True</property>
+                                                    <property name="xalign">0</property>
+                                                    <property name="draw_indicator">True</property>
+                                                    <signal name="toggled" handler="on_vnc_use_password_toggled" swapped="no"/>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkEntry" id="gfx-password">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="visibility">False</property>
+                                                    <property name="invisible_char">●</property>
+                                                    <property name="invisible_char_set">True</property>
+                                                    <signal name="changed" handler="on_vnc_password_changed" swapped="no"/>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">1</property>
