preferences: Stats interval can't be less than 1

--- a/ui/vmm-preferences.ui
+++ b/ui/vmm-preferences.ui
@@ -2,6 +2,7 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAdjustment" id="adjustment1">
+    <property name="lower">1</property>
     <property name="upper">60</property>
     <property name="step_increment">1</property>
     <property name="page_increment">5</property>
