--- a/ui/vmm-details.ui
+++ b/ui/vmm-details.ui
@@ -1372,7 +1372,7 @@
                                           </packing>
                                         </child>
                                         <child>
-                                          <object class="GtkLabel" id="label81">
+                                          <object class="GtkLabel" id="overview-machine-label">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">1</property>
@@ -1388,7 +1388,7 @@
                                           </packing>
                                         </child>
                                         <child>
-                                          <object class="GtkHBox" id="hbox30">
+                                          <object class="GtkHBox" id="overview-machine-box">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="spacing">6</property>
