--- a/ui/vmm-details.ui
+++ b/ui/vmm-details.ui
@@ -903,6 +903,7 @@
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="shadow_type">in</property>
+                                            <property name="min_content_height">80</property>
                                             <child>
                                               <object class="GtkTextView" id="overview-description">
                                                 <property name="visible">True</property>
@@ -960,7 +961,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="expand">True</property>
+                                <property name="expand">False</property>
                                 <property name="fill">True</property>
                                 <property name="position">0</property>
                               </packing>
